# clean

./: Cargo.toml  README.md  flake.nix
nix/shell/: default.nix
src/: main.rs
