[package]
name = "clean"
version = "0.1.0"
edition = "2024"

[dependencies]
dom_smoothie = { version = "0.11.0", default-features = false }
ureq = { version = "3.0.12", default-features = false, features = ["rustls"] }
url = {version = "2.5.4", default-features = false}

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
